# pyURLx

./: LICENSE  README.md  pyproject.toml
src/pyurlx/: tools.py
src/urlx/: shorten.py
