[build-system]
requires = ["requests", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "urlx"
authors = [
    {name = "James Marke", email = "mikeoxlong@saintly.com"},
    {name = "Callum Cardy", email = "pythonscratcher@email.cz"}
]
description = "A cool python module which shortens links using the URLx API"
readme = "README.md"
requires-python = ">=2.7"
keywords = ["url", "shorten", "link"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Link Shortener :: URLx",
    "Programming Language :: Python :: 2.7",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"2.7"',
]
dynamic = ["version"]
